* Sun Jan 18 2026 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.7.0-1)
- tcp: Proper timeout on connection, reading, writing., sharing the same EOS setting with serialport.
- interfacelistconnector: suggests serial ports in popup menu.
- cyfxusb: Discovers newly connected USB devices when "Device" combobox is clicked.
- xitemnodebase, xqcomboxconnector: onItemRefreshRequested().
- usertempcontrol: SI930X, worked with TCP/IP.

* Fri Jan 16 2026 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.6.0-1)
- Graph: popup and highlighting on math tools.
- Ocean Optics/Insight spectrometers: works with >0.5s exposure. USB2000 works.

* Mon Dec 22 2025 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.5.0-1)
- Graph: fix for cheap intel integrated graphics. GLselect no longer used. Changing to color picking technique.

* Sun Dec 14 2025 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.4.0-1)
- Win32: default compiler is now changed to clang++, with llvm-mingw64 build of Qt.
- win32-clang-g++: use dllexport instead of export-all-symbols.
- Fujikin MFC: suppressing communication errors for recent MFC.
- SI930* temp. monitor.: experimental yet.
- Ruby: fix for possible crash after touch().
- ODMR: many improvements and 2D imaging.
- Prologix: putting waits for better stability.

* Wed Oct 15 2025 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.3.1-1)
- Fix for thread safety regarding math tools.
- Lakeshore 218 temp monitor
- Many improvements on ODMR

* Tue Jul 29 2025 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.3.0-1)
- Displays fitted curves for math tools.
- Fix for compilation issues with some versions of pybind11 and ruby.
- Many improvements on digital camera and ODMR

* Tue May 27 2025 Kentaro Kitagawa <kitag@issp.u-tokyo.ac.jp>
- (7.2.5-1)
- Improved terminating procedure/close menu behavior.
- Fix for Prologix GPIB for drivers without serial poll.
- Scanner variants for Lakeshore 370/372
- better channel configs in Lakeshore 350/370/372