@@ -1,5 +1,5 @@
 /***************************************************************************
-		Copyright (C) 2002-2015 Kentaro Kitagawa
+        Copyright (C) 2002-2026 Kentaro Kitagawa
 		                   kitag@issp.u-tokyo.ac.jp
 		
 		This program is free software; you can redistribute it and/or
@@ -184,9 +184,7 @@ XCharInterface::XCharInterface(const char *name, bool runtime, const shared_ptr<
     #ifdef USE_SERIAL
         tr[ *device()].add("SERIAL");
     #endif
-    #ifdef USE_TCP
         tr[ *device()].add("TCP/IP");
-    #endif
         if(g_bLogDbgPrint)
             tr[ *device()].add("DUMMY"); //for debug purpose.
   
